@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.46.1.
-.TH AIR-QUALITY-SENSOR "1" "September 2014" "air-quality-sensor (air-quality-sensor) 0.1.2" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.46.5.
+.TH AIR-QUALITY-SENSOR "1" "March 2015" "air-quality-sensor (air-quality-sensor) 0.1.3" "User Commands"
 .SH NAME
 air-quality-sensor \- User space driver for AppliedSensor's Indoor Air Monitor
 .SH SYNOPSIS
@@ -21,16 +21,19 @@ Read the current air quality from a compatible attached sensor
 \fB\-h\fR, \fB\-\-help\fR
 display this help and exit
 .TP
-\fB\-v\fR, \fB\-\-version\fR
+\fB\-v\fR, \fB\-\-verbose\fR
+be verbose
+.TP
+\fB\-V\fR, \fB\-\-version\fR
 display version information and exit
 .SH "REPORTING BUGS"
-Report bugs on <https://github.com/bwildenhain/air\-quality\-sensor/issues> or send a mail to esperanto@benedikt\-wildenhain.de
+Report bugs on <https://github.com/bwildenhain/air\-quality\-sensor/issues> or send a mail to air\-quality\-sensor@benedikt\-wildenhain.de
 .br
 Home page: <https://github.com/bwildenhain/air\-quality\-sensor>
 .SH COPYRIGHT
 Copyright \(co 2014 Jan\-Benedict Glaw
 .br
-Copyright \(co 2014 Benedikt Wildenhain
+Copyright \(co 2015 Benedikt Wildenhain
 .PP
 License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
 .br
